@startuml
title Diagrama de clases final

class DatabaseConnection {
  - config
  - connection
  + conectar()
  + cerrar()
  + commit()
  + rollback()
  + ejecutar_consulta()
  + ejecutar_procedimiento()
  + ejecutar_lote()
}

class GestionOrigen <<dataclass>> {
  + id: int
  + fecha_gestion: datetime
  + dni: str
  + status: str
  + tipificacion: str
}

class GestionProcesada <<dataclass>> {
  + id_gestion_origen: int
  + status_original: str
  + status_homologado: str
  + clave_unica: str
}

class SourceGestionRepository {
  + obtener_gestiones_por_rango()
  + obtener_gestiones_por_lotes()
  + contar_gestiones_por_rango()
  + probar_stored_procedure()
}

class ControlDescargaRepository {
  + crear_control()
  + obtener_pendiente()
  + marcar_en_proceso()
  + actualizar_contadores()
  + marcar_finalizado()
  + marcar_error()
}

class GestionProcesadaRepository {
  + insertar_lote()
  + insertar_ignorando_duplicados()
  + existe_clave_unica()
  + obtener_por_rango()
}

class DescargadorService {
  + descargar_por_rango()
}

class LimpiadorService {
  + limpiar_dataframe()
  + limpiar_dni()
  + limpiar_telefono()
  + convertir_monto()
}

class HomologadorService {
  + homologar_dataframe()
  + homologar_status()
  + homologar_tipificacion()
}

class ValidadorService {
  + obtener_registros_validos()
  + generar_clave_unica()
  + eliminar_duplicados()
}

class ProcesadorGestionesService {
  + procesar_control()
}

class ReportePromesasService {
  + obtener_datos()
  + generar_html()
  + exportar_excel()
}
class ReporteImpulseService
class ReporteGerenciaService
class NotificacionService {
  + probar_conexion_smtp()
  + enviar_html()
  + enviar_con_adjunto()
}

SourceGestionRepository --> DatabaseConnection : source_db
GestionProcesadaRepository --> DatabaseConnection : target_db
ControlDescargaRepository --> DatabaseConnection : target_db
DescargadorService --> SourceGestionRepository
ProcesadorGestionesService --> DescargadorService
ProcesadorGestionesService --> LimpiadorService
ProcesadorGestionesService --> HomologadorService
ProcesadorGestionesService --> ValidadorService
ProcesadorGestionesService --> GestionProcesadaRepository
ProcesadorGestionesService --> ControlDescargaRepository
SourceGestionRepository ..> GestionOrigen
GestionProcesadaRepository ..> GestionProcesada
ReportePromesasService --> NotificacionService
ReporteImpulseService --> NotificacionService
ReporteGerenciaService --> NotificacionService
@enduml
